<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Nevolution Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="decorator_wechat_label">女娲石 - 即时通信增强（支持微信通知）</string>
    <string name="decorator_wechat_title">微信通知增强</string>
    <string name="decorator_wechat_description">符合当代 Android 的最佳通知体验：会话样式、直接回复、划除即已读等高级特性。</string>
    <string name="self_display_name">你</string>
    <string name="action_reply">回复</string>
    <string name="header_group_chat">群聊</string>
    <string name="header_bot_message">微信号</string>
    <string name="header_service_message">服务消息</string>
    <string name="wechat_with_no_reply_receiver">回复失败（微信缺少处理回复的组件，可能已禁用）</string>

    <string name="channel_message" translatable="false">新消息通知</string>
    <string name="channel_group_message" translatable="false">新群组消息通知</string>
    <string name="channel_misc" translatable="false">其它通知</string>

    <!-- Settings -->

    <string name="pref_activate_title">启用</string>
    <string name="pref_activate_summary_wechat_not_installed">“微信”未安装</string>
    <string name="pref_activate_summary_nevo_not_installed">“女娲石”尚未安装</string>
    <string name="pref_activate_summary_already_activated">已启用</string>
    <string name="pref_extension_title">特性扩展包</string>
    <string name="pref_extension_summary">添加更多特性（快捷回复、划掉标记已读 等）</string>
    <string name="pref_extension_summary_installed">已安装</string>
    <string name="pref_extension_summary_not_cloned_in_island">壶中界%s 内未克隆</string>
    <string name="prompt_extension_install">你有两个选项：安装完整版的 Android Auto（消耗较多空间），或者“极简包”。如果你不需要使用 Android Auto 或者不清楚它是什么，建议选择“极简包”。</string>
    <string name="action_install_android_auto">安装 Android Auto</string>
    <string name="action_install_dummy_auto">安装极简包</string>
    <string name="pref_compat_mode_title">兼容模式 (试验性)</string>
    <string name="pref_compat_mode_summary">强制设备全局进入兼容模式，其影响与具体设备有关。（例如 “息屏显示” 或 “双击唤醒” 无法工作）\n最新版本微信需要这个模式才能启用特性扩展包。</string>
    <string name="pref_agent_title">体验增强包</string>
    <string name="pref_agent_summary">通过安装一个微信的替身，支持快捷方式（“扫码”及最近的会话）、通知圆点（需启动器支持）、聊天气泡（Android 11+）等特性，还可消除女娲石工作在外源模式时微信通知前缀。</string>
    <string name="pref_agent_summary_prefix_enabled">已启用</string>
    <string name="pref_agent_summary_prefix_disabled">已禁用</string>
    <string name="pref_agent_summary_installed">启用此功能后，启动器中会多出一个与微信相同图标的启动入口，它是一个微信启动图标的“替身”，通知圆点（需启动器支持）和“扫码”快捷方式（Android 7.1+）将显示在其上。\n点击可切换此替身的显示名或禁用。</string>
    <string name="pref_agent_summary_update">有更新版本，请点击这里开始升级。🆕</string>
    <string name="action_disable_agent_launcher_entrance">隐藏替身的启动入口\n（将失去“快捷方式”和“消息气泡”）</string>
    <string name="pref_alert_dedup_title">解决双重提示问题</string>
    <string name="pref_alert_dedup_summary">消除双重提示音、震动及横幅快速闪替。</string>
    <string name="pref_alert_dedup_guide">如果遇到通知横幅的闪替问题，请关闭微信本身通知设置中“新消息通知”的横幅选项（或调降重要性）。\n\n如果遇到双重提示音或震动，请关闭微信本身通知设置中“新消息通知”的提示音或震动。\n\n请避免修改除“新消息通知”之外的其它通知类别。</string>
    <string name="pref_alert_dedup_action">打开微信本身的通知设置</string>
    <string name="pref_wear_title">Wear OS (实验性)</string>
    <string name="pref_wear_summary">同步通知至 Wear OS 设备。（如果设备上安装有微信 Wear 版，请勿开启）</string>
    <string name="pref_open_source_title">开源项目</string>
    <string name="pref_open_source_summary">欢迎来 GitHub 上访问我们</string>
    <string name="prompt_uninstall_agent_first">安装新版本前，须先卸载当前安装的微信替身版本。（尽管将提示卸载“微信”，实际卸载的只是微信替身，您的微信应用及数据不会受到任何影响）</string>
    <string name="action_continue">继续</string>
</resources>